# StellarSwipe-Contract

./: TODO.md  package-lock.json  task1.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: testnet.json
docs/: deep_links.md  emergency_pause.md  error_handling.md  event_schema.json  events.md  faq.md  fee_optimization.md  issue-253-blocker.md  notification_system.md  upgrade_procedure.md  upgrade_testing.md
docs/security/: fee_rounding_analysis.md  flash_loan_analysis.md  front_running_analysis.md  reentrancy_analysis.md  storage_key_analysis.md  threat_model.md
frontend/: PERFORMANCE.md  README.md  package-lock.json  package.json  tsconfig.json
frontend/.storybook/: main.ts
frontend/hooks/: useWallet.ts
frontend/src/components/: HUD.css  HUD.tsx  NotificationBanner.tsx
frontend/src/hooks/: useDebouncedPolling.ts  useRealtimeNotifications.ts
frontend/src/utils/: notifications.ts  stellarswipe-adapter.ts
frontend/stories/: HUD.stories.ts
scripts/: build.sh  deploy_testnet.sh  package-lock.json  package.json  replay_events.ts  sample_parsed_events_testnet.json  sample_replay_events_testnet.json  snapshot_state.ts  test_event_parsing.ts  validate_event_schema.ts
stellar-swipe/: Cargo.toml
stellar-swipe/.kiro/specs/deployment-verification/: design.md  requirements.md  tasks.md
stellar-swipe/contracts/auto_trade/: Cargo.toml  test_errors.txt
stellar-swipe/contracts/auto_trade/src/: admin.rs  advanced_risk.rs  auth.rs  conditional.rs  correlation.rs  emergency.rs  errors.rs  iceberg.rs  lib.rs  oracle.rs  portfolio_insurance.rs  positions.rs  rate_limit.rs  risk.rs  risk_parity.rs  smart_routing.rs  storage.rs  test.rs  test_health.rs  test_oracle_whitelist.rs  twap.rs
stellar-swipe/contracts/auto_trade/src/strategies/: arbitrage.rs  breakout.rs  dca.rs  grid.rs  mean_reversion.rs  ml_prediction.rs  mod.rs  momentum.rs  pairs_trading.rs  sentiment.rs  stat_arb.rs
stellar-swipe/contracts/auto_trade/tests/load/: test_high_volume.rs
stellar-swipe/contracts/bridge/: Cargo.toml
stellar-swipe/contracts/bridge/src/: analytics.rs  fees.rs  governance.rs  lib.rs  liquidity.rs  messaging.rs  monitoring.rs  test_health.rs  validators.rs
stellar-swipe/contracts/common/src/: commit_reveal.rs  emergency.rs  health.rs  lib.rs  oracle.rs  rate_limit.rs  replay_protection.rs  storage_key_tests.rs
stellar-swipe/contracts/fee_collector/: Cargo.toml
stellar-swipe/contracts/fee_collector/src/: analytics.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs
stellar-swipe/contracts/governance/: Cargo.toml
stellar-swipe/contracts/governance/src/: committees.rs  conviction_voting.rs  distribution.rs  errors.rs  lib.rs  proposals.rs  quadratic_voting.rs  reputation.rs  test.rs  test_health.rs  timelock.rs  token.rs  treasury.rs  voting.rs
stellar-swipe/contracts/integration_tests/: Cargo.toml
stellar-swipe/contracts/integration_tests/src/: lib.rs
stellar-swipe/contracts/integration_tests/tests/integration/: test_contract_upgrade.rs
stellar-swipe/contracts/oracle/src/: admin.rs  conversion.rs  errors.rs  events.rs  external_adapter.rs  governance.rs  history.rs  lib.rs  multi_hop.rs  sdex.rs  staleness.rs  storage.rs  test.rs  test_health.rs  types.rs  validation_tests.rs
stellar-swipe/contracts/shared/src/: errors.rs  events.rs  lib.rs
stellar-swipe/contracts/signal_registry/: Cargo.toml  RELEASE_NOTES.md
stellar-swipe/contracts/signal_registry/src/: admin.rs  analytics.rs  categories.rs  collaboration.rs  combos.rs  contests.rs  cross_chain.rs  errors.rs  events.rs  expiry.rs  export.rs  fees.rs  leaderboard.rs  lib.rs  migration.rs  ml_scoring.rs  performance.rs  position_sizing.rs  providers.rs  query.rs  reputation.rs  scheduling.rs  stake.rs  test.rs  test_admin_transfer.rs  test_adoption.rs  test_ai_score.rs  test_analytics.rs  test_categories.rs  test_collaboration.rs  test_combos.rs  test_contests.rs  test_emergency.rs  test_export.rs  test_health.rs  test_position_sizing.rs  test_reputation.rs  test_scheduling.rs  test_signal_issues.rs  test_versioning.rs  (+3 more)
stellar-swipe/contracts/signal_registry/src/tests/: mod.rs  test_reentrancy.rs
stellar-swipe/contracts/stake_vault/src/: lib.rs  tests.rs
stellar-swipe/contracts/trade_executor/: Cargo.toml  README.md
stellar-swipe/contracts/trade_executor/src/: errors.rs  keeper.rs  lib.rs  oracle.rs  risk_gates.rs  sdex.rs  test.rs  triggers.rs  wire.rs
stellar-swipe/contracts/trade_executor/src/tests/: mod.rs  test_batch_execute.rs  test_oracle_staleness.rs
stellar-swipe/contracts/user_portfolio/: Cargo.toml
stellar-swipe/contracts/user_portfolio/src/: achievements.rs  badge_tests.rs  badges.rs  lib.rs  onboarding.rs  queries.rs  storage.rs  subscriptions.rs
stellar-swipe/contracts/user_portfolio/src/tests/: test_pnl.rs
stellar-swipe/contracts/user_portfolio/tests/: premium_signal_gating.rs
stellar-swipe/docs/: cross_contract_auth.md  events.md
stellar-swipe/scripts/: build.sh  deploy_testnet.sh  health_check.sh  verify_deployment.sh
stellar-swipe/scripts/tests/: verify_deployment.bats
stellar-swipe/scripts/tests/helpers/: stub_stellar.bash
