[package]
name = "auto_trade"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
stellar_swipe_common = { path = "../common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[[test]]
name = "test_high_volume"
path = "tests/load/test_high_volume.rs"
required-features = ["testutils"]

