[package]
name = "fee_collector"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
 main
stellar_swipe_common = { path = "../common" }

 main

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = { version = "1", default-features = false, features = ["std"] }
