[package]
name = "integration_tests"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stake_vault = { path = "../stake_vault" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[[test]]
name = "test_contract_upgrade"
path = "tests/integration/test_contract_upgrade.rs"
